# ukrainian-toxic-text-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py
data_prep/: label_uk_data.py  prepare_jigsaw_dataset.py  preprocess_dataset.py  translate_jigsaw_dataset.py
notebooks/: 01_jigsaw_v1_overview.ipynb  02_jigsaw_v2_overview.ipynb  03_jigsaw_sampling_and_refinement.ipynb  04_jigsaw_uk_preprocessing.ipynb  05_combine_uk_datasets.ipynb  05_combine_ukr_datasets.ipynb  06_test_set_construction.ipynb  07_test_set_analysis.ipynb
scripts/: evaluate.py  train.py
toxicity_detector/config/: labels.py  model_config.py  paths.py  settings.py  thresholds.py  training_config.py  vocabulary.py
toxicity_detector/data/: dataset_builder.py  model_assisted_uk_data_labeling.py  prepare_jigsaw_dataset.py  preprocess_dataset.py  sampling.py  text_cleaning.py  translate_jigsaw_dataset.py
toxicity_detector/model/: loader.py  predictor.py  training.py
toxicity_detector/utils/: evaluation.py  logger.py  plotting.py  sampling.py  text_cleaning.py
