[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-detector"
version = "0.1.0"
description = "A package for detecting toxic comments"
authors = [
    { name="Amina" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/Viathorr/toxic-text-detector"

[tool.setuptools]
packages = ["toxicity_detector"]