[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-detector"
version = "0.1.0"
description = "Multi-label toxicity detection for Ukrainian-language comments"
authors = [
    { name="Amina" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/Viathorr/ukrainian-toxic-text-detector"

[tool.setuptools.packages.find]
where = ["."]
include = ["toxicity_detector*"]